refactor: removed schemas retrieval endpoint by username
